--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/lalith-ippili/Portfolio",
+  "Home": "https://github.com/lalith-ippili/Portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
