--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "Home": "https://github.com/lalith-ippili/Portfolio",
   "name": "portfolio",
+  "homepage": "https://lalith-ippili.github.io/Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
